table no longer runs off the page on decks.html and author and tags columns are now hidden on small screen width sizes

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -69,6 +69,12 @@
     width: 100%;
 }
 
+@media (max-width: 500px) {
+    .mobilehide {
+        display: none;
+    }
+}
+
 .navbar {
     background-color: #3385FF;
     border: 0px;
